--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=IMPS
-spring.datasource.url=jdbc:mysql://localhost:3306/imps
+spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=xlSBuAlWWEoNdcHoBiEMbhDZCpamNicb
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
