--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=IMPS
-spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
+spring.datasource.url=jdbc:mysql://autorack.proxy.rlwy.net:31144/railway
 spring.datasource.username=root
 spring.datasource.password=xlSBuAlWWEoNdcHoBiEMbhDZCpamNicb
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
