--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,17 @@
+# Application name
 spring.application.name=IMPS
+
+# DataSource configuration for MySQL
 spring.datasource.url=jdbc:mysql://autorack.proxy.rlwy.net:31144/railway
 spring.datasource.username=root
 spring.datasource.password=xlSBuAlWWEoNdcHoBiEMbhDZCpamNicb
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA/Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-
+# Mail configuration for sending emails
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=imps.citu.edu@gmail.com
@@ -13,8 +19,10 @@ spring.mail.password=ovxbkhpvrxxstqwh
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+# Tomcat relaxed query characters
 server.tomcat.relaxed-query-chars=|,{,},[,],^
 
+# File upload settings
 spring.servlet.multipart.max-file-size=128MB
 spring.servlet.multipart.max-request-size=128MB
 spring.servlet.multipart.enabled=true
