--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 spring.application.name=IMPS
 
 # DataSource configuration for MySQL
-spring.datasource.url=jdbc:mysql://autorack.proxy.rlwy.net:58918/railway
+spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
 spring.datasource.username=root
-spring.datasource.password=DrGUuVdAHXmziSqrZFmnfGjRrImzuNOp
+spring.datasource.password=HykrYZVTBCPLUzKgjwrVpBnUFUARutKo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate settings
