--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 spring.application.name=IMPS
 
 # DataSource configuration for MySQL
-spring.datasource.url=jdbc:mysql://autorack.proxy.rlwy.net:19549/railway
-spring.datasource.username=root
-spring.datasource.password=HykrYZVTBCPLUzKgjwrVpBnUFUARutKo
+spring.datasource.url=jdbc:mysql://${DB_HOST:locahost}:${DB_PORT:3306}${DB_NAME:imps}
+spring.datasource.username=DB_USERNAME
+spring.datasource.password=DB_PASSWORD
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate settings
