--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 spring.application.name=IMPS
 
 # DataSource configuration for MySQL
-spring.datasource.url=jdbc:mysql://${DB_HOST:locahost}:${DB_PORT:3306}${DB_NAME:imps}
-spring.datasource.username=DB_USERNAME
-spring.datasource.password=DB_PASSWORD
+spring.datasource.url=jdbc:mysql://$junction.proxy.rlwy.net:20068/railway
+spring.datasource.username=root
+spring.datasource.password=xVlMJlKMMFfbwJecYFcsOYerguWMtYMT
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate settings
