--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=IMPS
 
 # DataSource configuration for MySQL
-spring.datasource.url=jdbc:mysql://$junction.proxy.rlwy.net:20068/railway
+spring.datasource.url=jdbc:mysql://junction.proxy.rlwy.net:20068/railway
 spring.datasource.username=root
 spring.datasource.password=xVlMJlKMMFfbwJecYFcsOYerguWMtYMT
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
