--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
 			<version>8.0.33</version> 
 			<scope>runtime</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
