--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,13 @@
 spring.application.name=IMPS
 
 # DataSource configuration for MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/imps
+spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=YeKOLduHrWLuAwvDejZDmjaWQBhuKPpr
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+
 # JPA/Hibernate settings
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Mail configuration for sending emails
